--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,12 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      -  run: echo "Hello"
-
+       - uses: actions/checkout@v5
+       - uses: actions/setup-go@v6
+         with:
+           go-version: '1.23'
+       - run: go version
+       - run: go test -v   ../../internal/retry
 
 
 
