--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
          with:
            go-version: '1.25.4'
        - run: go version
-       - run: go test -v   ../../internal/retry
+       - run: go test -v ./internal/retry
 
 
 
